@@ -688,10 +688,10 @@ Verify that $AB$ is nonsingular.
 <exercise type="C" number="40" rough="4x4 system solution using inverse">
 <problem contributor="robertbeezer">Solve the system of equations below using the inverse of a matrix.
 <alignmath>
-x_1+x_2+3x_3+x_4=5\\
--2x_1-x_2-4x_3-x_4=-7\\
-x_1+4x_2+10x_3+2x_4=9\\
--2x_1-4x_3+5x_4=9
+<![CDATA[x_1+x_2+3x_3+x_4&=5\\]]>
+<![CDATA[-2x_1-x_2-4x_3-x_4&=-7\\]]>
+<![CDATA[x_1+4x_2+10x_3+2x_4&=9\\]]>
+<![CDATA[-2x_1-4x_3+5x_4&=9]]>
 </alignmath>
 </problem>
 <solution contributor="robertbeezer">The coefficient matrix and vector of constants for the system are
