@@ -1070,7 +1070,7 @@ Notice that this solution can be easily checked in the original system of equati
 </exercise>
 
 <exercise type="C" number="41" rough="Solve 3x3 system with inverse">
-<problem contributor="robertbeezer">Use the inverse of a matrix to find all the solutions to the following system of equations.  %
+<problem contributor="robertbeezer">Use the inverse of a matrix to find all the solutions to the following system of equations.
 <alignmath>
 <![CDATA[x_1 + 2 x_2 - x_3 &= -3\\]]>
 <![CDATA[2 x_1 + 5 x_2 - x_3 &= -4\\]]>
