@@ -19,6 +19,7 @@ Typo:  Spelling and grammar, Annotated Acronyms VS (Nick Butterfield)
 Typo:  LaTeX/XML formatting, Proof of SLSLC, discussion after VSPCV
 Typo:  Several LS(A,b) without bold  b  vector (Sophie Bartolomeo)
 Typo:  Sign change deep in Example SSP (Dan Messenger)
+Typo:  LaTeX/XML formatting in Exercises MISLE.C41, MINM.C40 (Caden Robinson)
 
 
 MAJOR SOURCE FORMAT CHANGE
